k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greet-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greet-service
  template:
    metadata:
      labels:
        app: greet-service
        version: IMAGE_LABEL
    spec:
      containers:
      - name: greet-service
        image: DOCKER_USERNAME/greet-service:IMAGE_LABEL
        ports:
        - containerPort: 8080
        livenessProbe:
            httpGet:
              path: /health/live
              port: http
            initialDelaySeconds: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            initialDelaySeconds: 10
            periodSeconds: 120
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: greet-service
spec:
  type: NodePort
  selector:
    app: greet-service
  ports:
  - port: 80
    targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: greet-service
spec:
  host: greet-service-NAME_SPACE.apps.OC_URL
  to:
    kind: Service
    name: greet-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
#---
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: greet-service
#  annotations:
#    kubernetes.io/ingress.class: addon-http-application-routing
#spec:
#  rules:
#  - host: greet-service.K8S_URL
#    http:
#      paths:
#      - backend:
#          serviceName: greet-service
#          servicePort: 8080
#        path: /
